first own bundle and config

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,5 @@ homepage:
     pattern:  /
     defaults: { _controller: FrameworkBundle:Default:index }
 
+page:
+    resource: "@PageBundle/Resources/config/routing.yml"
