adding FunctionalTestBundle to submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "src/Bundle/DoctrinePHPCRBundle"]
 	path = src/Bundle/DoctrinePHPCRBundle
 	url = git://github.com/Seldaek/DoctrinePHPCRBundle.git
+[submodule "src/Liip/FunctionalTestBundle"]
+        path = src/Liip/FunctionalTestBundle
+        url = git://github.com/liip/FunctionalTestBundle.git
