--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = git://github.com/swiftmailer/swiftmailer.git
 [submodule "vendor/doctrine-phpcr"]
 	path = vendor/doctrine-phpcr
-	url = git://github.com/Seldaek/phpcr-odm.git
+	url = git://github.com/doctrine/phpcr-odm.git
 [submodule "src/Bundle/DoctrinePHPCRBundle"]
 	path = src/Bundle/DoctrinePHPCRBundle
 	url = git://github.com/Seldaek/DoctrinePHPCRBundle.git
