--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,4 @@
 homepage:
     pattern:  /
-    defaults: { _controller: FrameworkBundle:Default:index }
+    defaults: { _controller: SandboxMainBundle:Default:index }
 
