fixing install guide, spelling error in fixtures

--- a/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
+++ b/src/Sandbox/MainBundle/Resources/data/fixtures/static/page.yml
@@ -3,7 +3,7 @@ static:
         name: "page"
         title: "Static page"
         content: |
-            <h2>Philosophy et working conditions</h2>
+            <h2>Philosophy and working conditions</h2>
             <p>Sed sale modus nusquam ne. At omnesque senserit vel, veritus denique epicuri pri eu, nam illud constituam in. Id sit convenire mediocrem. Erant facilisi pri ea, quo ignota graeci dolores in, idque legere commune nam an. Eros fabulas scripserit mea ea. Mei everti hendrerit et, sit in harum vituperata.</p>
             <h2><span class="contentH2">dicta facete eu vis</span></h2>
             <p>Sonet affert an has. Nam id odio nisl eruditi. Te quo falli propriae delectus, ut animal meliore est, agam decore in sea. Prima debet fierent id sed. Usu debet paulo argumentum ex, solum homero in sed, modus laboramus et usu. Brute legendos contentiones ex pri.
