Update config file accordingly to up-to-date DoctrinePHPCRBundle's config file requirements

--- a/app/config/config.yml.dist
+++ b/app/config/config.yml.dist
@@ -17,9 +17,9 @@ twig:
     strict_variables: %kernel.debug%
 
 doctrine_phpcr:
-    backend:
-        url: http://localhost:8080/server/
+    session:
+        backend:
+            url: http://localhost:8080/server/
         workspace: default
-        user: admin
-        pass: admin
-
+        username: admin
+        password: admin
