--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -7,7 +7,7 @@ framework:
 
 web_profiler:
     toolbar: true
-    intercept_redirects: true
+    intercept_redirects: false
 
 monolog:
     handlers:
@@ -15,3 +15,9 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+        firephp:
+            type:  firephp
+            level: info
+
+assetic:
+    use_controller: true
