--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="bootstrap.php"
+<!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
+<phpunit
+    backupGlobals="false"
+    backupStaticAttributes="false"
+    colors="true"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    processIsolation="false"
+    stopOnFailure="false"
+    syntaxCheck="false"
+    bootstrap="bootstrap.php.cache"
 >
-  <testsuites>
-      <testsuite name="Project Test Suite">
-          <directory>../src/*/*Bundle/Tests</directory>
-      </testsuite>
-  </testsuites>
 
-  <!--
-  <php>
-      <server name="KERNEL_DIR" value="/path/to/your/app/" />
-  </php>
-  //-->
+    <testsuites>
+        <testsuite name="Project Test Suite">
+            <directory>../vendor/symfony-cmf/src</directory>
+            <directory>../src/*/*Bundle/Tests</directory>
+            <directory>../src/*/Bundle/*Bundle/Tests</directory>
+        </testsuite>
+    </testsuites>
 
-  <filter>
-      <whitelist>
-          <directory>../src</directory>
-          <exclude>
-              <directory>../src/*/*Bundle/Resources</directory>
-              <directory>../src/*/*Bundle/Tests</directory>
-          </exclude>
-      </whitelist>
-  </filter>
+    <!--
+    <php>
+        <server name="KERNEL_DIR" value="/path/to/your/app/" />
+    </php>
+    -->
+
+    <filter>
+        <whitelist>
+            <directory>../src</directory>
+            <exclude>
+                <directory>../src/*/*Bundle/Resources</directory>
+                <directory>../src/*/Bundle/*Bundle/Resources</directory>
+            </exclude>
+            <directory>../vendor/symfony-cmf/src</directory>
+        </whitelist>
+    </filter>
+
 </phpunit>
