--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,6 +72,10 @@ doctrine_phpcr:
     odm:
         auto_mapping: true
 
+symfony_cmf_navigation:
+    controllers_by_alias:
+        static_pages: sandbox_main.controller:indexAction
+
 knp_menu:
     twig: true
 
