--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,3 +84,4 @@ liip_vie:
     #orm: doctrine.orm.my_entity_manager
     map:
         '<sioc:Post>': 'Sandbox\MainBundle\Document\EditableStaticContent'
+    use_coffee: %liip_vie.use_coffee%
