updating sandbox to newest version of symfony-cmf and cleaning up dependencies and autoloading

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,7 @@ doctrine_phpcr:
 symfony_cmf_navigation:
     controllers_by_alias:
         static_pages: sandbox_main.controller:indexAction
+        editablestatic: sandbox_main.controller:indexAction
 
 knp_menu:
     twig: true
