--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,7 @@
 imports:
-    - { resource: parameters.yml }
+    - { resource: parameters.ini }
     - { resource: security.yml }
+
 
 framework:
     #esi:             ~
@@ -12,7 +13,7 @@ framework:
     csrf_protection: true
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
-    default_locale:  %locale%
+    default_locale: %locale%
     session:
         auto_start:     true
 
@@ -37,19 +38,19 @@ assetic:
         #     jar: %kernel.root_dir%/java/yuicompressor-2.4.2.jar
 
 # Doctrine Configuration
-# doctrine:
-#     dbal:
-#         driver:   %database_driver%
-#         host:     %database_host%
-#         port:     %database_port%
-#         dbname:   %database_name%
-#         user:     %database_user%
-#         password: %database_password%
-#         charset:  UTF8
-#
-#     orm:
-#         auto_generate_proxy_classes: %kernel.debug%
-#         auto_mapping: true
+doctrine:
+    dbal:
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   %database_name%
+        user:     %database_user%
+        password: %database_password%
+        charset:  UTF8
+
+    orm:
+        auto_generate_proxy_classes: %kernel.debug%
+        auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -65,6 +66,11 @@ jms_security_extra:
 # cmf configuration
 doctrine_phpcr:
     # configure the PHPCR session
+    #session:
+    #    backend:
+    #        type: doctrinedbal
+    #        connection: doctrine.dbal.default_connection
+    #    workspace: %phpcr_workspace%
     session:
         backend:
             url: %phpcr_url%
@@ -89,3 +95,11 @@ liip_vie:
     map:
         '<sioc:Post>': 'Sandbox\MainBundle\Document\EditableStaticContent'
     use_coffee: %liip_vie.use_coffee%
+
+#sonata_admin:
+
+sonata_admin:
+    templates:
+        # default global templates
+        layout:  SonataAdminBundle::standard_layout.html.twig
+        ajax:    SonataAdminBundle::ajax_layout.html.twig
