--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,16 @@
 #admin:
 #    resource: @SandboxAdminBundle/Resources/config/routing.yml
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
+
 test:
     pattern:  /hello
     defaults: { _controller: SandboxTestBundle:Test:index }
