--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,6 +80,17 @@ symfony_cmf_navigation:
         static_pages: sandbox_main.controller:indexAction
         editablestatic: sandbox_main.controller:indexAction
 
+symfony_cmf_chain_routing:
+    chain:
+        routers_by_id:
+            # TODO: enable doctrine router once its working
+            #symfony_cmf_chain_routing.doctrine_router: 200
+            router.default: 100
+    doctrine:
+        controllers_by_alias:
+            static_pages: sandbox_main.controller:indexAction
+            editablestatic: sandbox_main.controller:indexAction
+
 knp_menu:
     twig: true
 
