use parameters.yml again

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,7 +1,6 @@
 imports:
-    - { resource: parameters.ini }
+    - { resource: parameters.yml }
     - { resource: security.yml }
-
 
 framework:
     #esi:             ~
