Vagrant/puppet changes
* supply name for vm in Vagrantfile, add default memory size
* install git in vm
* change directory to /app ssh login in vm

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,6 +8,11 @@ Vagrant::Config.run do |config|
 
   config.vm.host_name = "cmfsandbox"
 
+  config.vm.customize do |vm|
+    vm.memory_size = 256
+    vm.name = "cmfsandbox"
+  end
+
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
   config.vm.box_url = "http://files.vagrantup.com/lucid32.box"
