--- a/src/Sandbox/MainBundle/Resources/config/services.yml
+++ b/src/Sandbox/MainBundle/Resources/config/services.yml
@@ -7,5 +7,8 @@ services:
 
     sandbox_main.image_controller:
         class: Sandbox\MainBundle\Controller\ImageController
+        factory_service: doctrine_phpcr.odm.document_manager
         arguments:
             container: "@service_container"
+            - @doctrine_phpcr.odm.document_manager
+            - @fos_rest.view_handler
