--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,10 +11,10 @@ test:
     defaults: { _controller: SandboxTestBundle:Test:index }
 
 main:
-    pattern: /image/upload
-    defaults: { _controller: sandbox_main.image_controller:uploadAction }
+    pattern: /image/upload/
+    defaults: { _controller: sandbox_main.image_controller:uploadAction, _format: json }
     requirements:
-        _format:  json
+        _format: json
 
 vie:
     resource: "@LiipVieBundle/Resources/config/routing/phpcr_odm.xml"
