minor tweak in the proxy handling

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,7 +64,7 @@ doctrine_phpcr:
     # enable the ODM layer
     odm:
         auto_mapping: true
-        auto_generate_proxy_classes: true
+        auto_generate_proxy_classes: %kernel.debug%
 
 symfony_cmf_navigation:
     controllers_by_alias:
