show off more of the chain routing capabilities. the fixtures need some love to better reflect what is going on. maybe we should add different types of content to make it more clear why we have the features in chain routing. TODO: use the generic ContentController instead of our copy for indexAction

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,6 +80,10 @@ symfony_cmf_chain_routing:
         controllers_by_alias:
             static_pages: sandbox_main.controller:indexAction
             editablestatic: sandbox_main.controller:indexAction
+        controllers_by_class:
+            Sandbox\MainBundle\Document\EditableStaticContent: sandbox_main.controller:indexAction
+        generic_controller:
+            sandbox_main.controller:indexAction
 
 knp_menu:
     twig: true
