adding demo for redirect routes

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,7 @@ symfony_cmf_chain_routing:
             demo_alias: sandbox_main.controller:aliasAction
         controllers_by_class:
             Sandbox\MainBundle\Document\DemoClassContent: sandbox_main.controller:classAction
+            Symfony\Cmf\Bundle\ChainRoutingBundle\Document\RedirectRoute:  symfony_cmf_chain_routing.redirect_controller:redirectAction
         templates_by_class:
             Sandbox\MainBundle\Document\EditableStaticContent: SandboxMainBundle:EditableStaticContent:index.html.twig
 
