updating to latest dependencies and getting rid of NavigationBundle and the obsolete annotations in MultilangContentBundle. start to use MultilangMenuItem but not visibile yet

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,6 +65,20 @@ doctrine_phpcr:
     odm:
         auto_mapping: true
         auto_generate_proxy_classes: %kernel.debug%
+#        locales:
+#            en:
+#                - en
+#                - de
+#                - fr
+#            de:
+#                - de
+#                - en
+#                - fr
+#            fr:
+#                - fr
+#                - en
+#                - de
+
 
 symfony_cmf_content: ~
 
