--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,6 +108,7 @@ sonata_admin:
         # default global templates
         layout:  SonataAdminBundle::standard_layout.html.twig
         ajax:    SonataAdminBundle::ajax_layout.html.twig
+        dashboard: SandboxAdminBundle::dashboard.html.twig
 
 fos_js_routing:
     routes_to_expose:
